rnsc/tests/snapshots/error-parser-inner_directive-inner_end_trailing_tokens_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that parser continues after inner_end trailing tokens error and reports subsequent errors
; Expected errors: E-033 (inner_end trailing tokens), E-007 (unknown token in class body)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
.inner_end trailing_tokens

     unknown_token ; <- still reported after recovery

.class_end
----- STDERR -----
[E-033] Error: unexpected trailing tokens after inner class definition end
   ╭─[ test_data/rns_integration/error/parser/inner_directive/inner_end_trailing_tokens_recovers.rns:9:12 ]
   │
 9 │ .inner_end trailing_tokens
   │           │───────┬───────  
   │           ╰───────────────── expected end of inner class definition end here
   │                   │         
   │                   ╰───────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-033
───╯
[E-007] Error: unexpected identifier class body
    ╭─[ test_data/rns_integration/error/parser/inner_directive/inner_end_trailing_tokens_recovers.rns:11:6 ]
    │
 11 │      unknown_token ; <- still reported after recovery
    │      ──────┬──────  
    │            ╰──────── unexpected token
    │ 
    │ Help: Check the syntax of the class body and ensure all tokens are valid.
    │ 
    │ Note: For more details see:
    │       https://rune.lagertha-vm.com/errors/E-007
────╯
----- JAVAP -----
not generated
