rnsc/tests/snapshots/error-parser-inner_directive-trailing_tokens_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that parser continues after trailing tokens error and reports subsequent errors
; Expected errors: E-032 (inner trailing tokens), E-034 (unexpected token in inner body)

.class public MyClass
.super java/lang/Object

.inner Inner trailing_tokens
    .super java/lang/Object

     unknown_token ; <- E-034, still reported after recovery
.inner_end

.class_end
----- STDERR -----
[E-032] Error: unexpected trailing tokens after inner class definition
   ╭─[ test_data/rns_integration/error/parser/inner_directive/trailing_tokens_recovers.rns:7:14 ]
   │
 7 │ .inner Inner trailing_tokens
   │             │───────┬───────  
   │             ╰───────────────── expected end of inner class definition here
   │                     │         
   │                     ╰───────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-032
───╯
[E-034] Error: unexpected identifier inner class body
    ╭─[ test_data/rns_integration/error/parser/inner_directive/trailing_tokens_recovers.rns:10:6 ]
    │
 10 │      unknown_token ; <- E-034, still reported after recovery
    │      ──────┬──────  
    │            ╰──────── unexpected token
    │ 
    │ Help: Check the syntax of the inner class body and ensure all tokens are valid.
    │ 
    │ Note: For more details see:
    │       https://rune.lagertha-vm.com/errors/E-034
────╯
----- JAVAP -----
not generated
