rnsc/tests/snapshots/error-parser-inner_directive-unexpected_token_in_body_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that parser continues after unexpected token error and reports subsequent errors
; Expected errors: E-034 (unexpected token in inner body), E-007 (unknown token in class body)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object

     unknown_token ; <- E-034
.inner_end

     unknown_token_after_end ; <- E-007 after inner_end

.class_end
----- STDERR -----
[E-034] Error: unexpected identifier inner class body
    ╭─[ test_data/rns_integration/error/parser/inner_directive/unexpected_token_in_body_recovers.rns:10:6 ]
    │
 10 │      unknown_token ; <- E-034
    │      ──────┬──────  
    │            ╰──────── unexpected token
    │ 
    │ Help: Check the syntax of the inner class body and ensure all tokens are valid.
    │ 
    │ Note: For more details see:
    │       https://rune.lagertha-vm.com/errors/E-034
────╯
[E-007] Error: unexpected identifier class body
    ╭─[ test_data/rns_integration/error/parser/inner_directive/unexpected_token_in_body_recovers.rns:13:6 ]
    │
 13 │      unknown_token_after_end ; <- E-007 after inner_end
    │      ───────────┬───────────  
    │                 ╰───────────── unexpected token
    │ 
    │ Help: Check the syntax of the class body and ensure all tokens are valid.
    │ 
    │ Note: For more details see:
    │       https://rune.lagertha-vm.com/errors/E-007
────╯
----- JAVAP -----
not generated
